compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-4.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 78
expression: "pub fn go() {\n  let y = 1\n  let y = 2\n  y\n}"
---
-module(the_app).
-compile(no_auto_import).

-export([go/0]).

-spec go() -> integer().
go() ->
    Y = 1,
    Y@1 = 2,
    Y@1.

