compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test10.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type Null { Null }\npub fn x() { Null }"
---
----- SOURCE CODE
pub type Null { Null }
pub fn x() { Null }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([x/0]).
-export_type([null/0]).

-type null() :: null.

-spec x() -> null().
x() ->
    null.
