compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test17.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub type User { User(id: Int, name: String, age: Int) }\npub fn create_user(user_id) { User(age: 22, id: user_id, name: \"\") }\n"
---
----- SOURCE CODE

pub type User { User(id: Int, name: String, age: Int) }
pub fn create_user(user_id) { User(age: 22, id: user_id, name: "") }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([create_user/1]).
-export_type([user/0]).

-type user() :: {user, integer(), binary(), integer()}.

-spec create_user(integer()) -> user().
create_user(User_id) ->
    {user, User_id, ~"", 22}.
