compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1_2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn loop() { loop() }"
---
----- SOURCE CODE
pub fn loop() { loop() }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([loop/0]).

-spec loop() -> any().
loop() ->
    loop().
